--- a/src/Spring.Rest/Spring.Rest.2008-CF35.csproj
+++ b/src/Spring.Rest/Spring.Rest.2008-CF35.csproj
@@ -48,6 +48,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
+    <Reference Include="Newtonsoft.Json.Compact, Version=3.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\cf\3.5\Newtonsoft.Json.Compact.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
@@ -110,6 +114,7 @@
     <Compile Include="Http\HttpUtils.cs" />
     <Compile Include="Http\IHttpInputMessage.cs" />
     <Compile Include="Http\IHttpOutputMessage.cs" />
+    <Compile Include="Http\Converters\Json\NJsonHttpMessageConverter.cs" />
     <Compile Include="Http\MediaType.cs" />
     <Compile Include="IO\AbstractResource.cs" />
     <Compile Include="IO\AssemblyResource.cs" />
